[package]
name = "media_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "media_core"
path = "../src/main.rs"

[dependencies]
opencv = "0.93.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rayon = "1.8"
num_cpus = "1.16"
path-clean = "1.0"
serde_path_to_error = "0.1"
serde_json = "1.0"
regex = "1.10"
